[package]
name = "sqlite_unicase"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rusqlite = { version = "0.32", features = ["functions", "collation", "bundled", "loadable_extension"] }
unicase = "=2.6.0"
# Pinned becase of changing this may invalidate Anki's database indexes
